--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "dependencies": {
     "babel-core": "6.3.17",
     "babel-preset-es2015": "6.3.13"
+  },
+  "scripts": {
+    "repro": "node repro"
   }
 }
