--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "babel-cli": "6.3.17",
     "babel-core": "6.3.17",
     "babel-preset-es2015": "6.3.13"
+  },
+  "scripts": {
+    "repro": "sh repro.sh"
   }
 }
