--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "babel-cli": "6.3.17",
     "babel-core": "6.3.17",
     "babel-preset-es2015": "6.3.13"
   }
